<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="medis.ourlab.labkita.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/C2">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:gravity="center_vertical">

            <LinearLayout


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:text="Lab Kita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textColor="@color/C1"
                    android:textSize="42sp"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:layout_marginBottom="10dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:drawableLeft="@drawable/mail3"
                        android:textColor="@color/C3"


                        android:fontFamily="sans-serif-light"
                        android:textStyle="italic"
                        android:textColorHint="@color/C5"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:background="#ffffff"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/password"
                        android:textColor="@color/C3"
                        android:fontFamily="sans-serif-light"
                        android:singleLine="true"
                        android:textStyle="italic"
                        android:textColorHint="@color/C5"
                         />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:text="@string/keep_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:textColor="@color/C1"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:background="@color/C3"
                    android:textColor="@color/C1"
                    android:fontFamily="sans-serif"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:text="@string/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/C1"
                    android:fontFamily="sans-serif"
                    android:id="@+id/forgotPassword"
                    android:gravity="center"
                    android:clickable="true" />

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15">
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="medis.ourlab.labkita.activity.LoginActivity">

        <TextView
            android:id="@+id/txt_push_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/txt_reg_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</LinearLayout>
